Resolves: tdf#100303 Report crashes on close of conditional formatting dialog

Condition multiply inherits so the Builder::disposeBuilder call was missed

and prenotify occurs during ::dispose when there is no m_pConditionPlayground
anymore, so m_pConditionPlayground == 0 where pPlaygroundCandidate is 0
passes, so a random widget gets cast to somethings its not, hence the bad
cast exception

Change-Id: I6d081dd55df1a68ab893294858e1ab0054d5e049
(cherry picked from commit 547e4b3a80708600edbc3f5669b4428877b5a951)
Reviewed-on: https://gerrit.libreoffice.org/26569
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 7cb1840b41fcb1cf0ec60a0ceecfd1cbf6e44ae7)